# projeto_aquisi--o_polissonografia

./: README.md
cpp/: CMakeLists.txt
cpp/include/: ads1256_driver.h  data_server.h  frame_protocol.h  ring_buffer.h
cpp/src/: ads1256_driver.cpp  ads1256_hw.cpp  data_server.cpp  main.cpp  spi_probe.cpp
python/: pyproject.toml
python/polysomniagui/: client.py  main.py  realtime_plot.py
